--- a/app/shared/dir_pagination.tpl.html
+++ b/app/shared/dir_pagination.tpl.html
@@ -1,6 +1,6 @@
 <ul class="pagination" ng-if="1 < pages.length">
     <li ng-if="boundaryLinks" ng-class="{ disabled : pagination.current == 1 }">
-        <a href="" ng-click="setCurrent(1)">First</a>
+        <a href="" ng-click="setCurrent(1)">Início</a>
     </li>
     <li ng-if="directionLinks" ng-class="{ disabled : pagination.current == 1 }" class="ng-scope">
         <a href="" ng-click="setCurrent(pagination.current - 1)" class="ng-binding">
@@ -17,6 +17,6 @@
         </a>
     </li>
     <li ng-if="boundaryLinks"  ng-class="{ disabled : pagination.current == pagination.last }">
-        <a href="" ng-click="setCurrent(pagination.last)">Last</a>
+        <a href="" ng-click="setCurrent(pagination.last)">Último</a>
     </li>
 </ul>
