Inserted href linkedin

--- a/index.html
+++ b/index.html
@@ -403,10 +403,11 @@
   <footer class="page-footer teal">
     <div class="footer-copyright">
       <div class="container">
+
         © 2017 - Made with ❤ by &nbsp; &nbsp; <a href="http://gama.academy/"><img src="assets/img/gama.png" width="10%"></a>        ©
-        <br><br> Developers: Bruno Andrade Santos, Michaell Reis Gasparini, Victor Angelo Marcorin, Vitor Savedra - Gama Experience
+        <br><br> Developers: <a href ="https://www.linkedin.com/in/bruno-andrade-santos-67565711b/">Bruno Andrade Santos</a>, <a href ="https://www.linkedin.com/in/michaellrg/">Michaell Reis Gasparini</a>, <a href ="https://www.linkedin.com/in/victormarcorin/">Victor Angelo Marcorin</a>, <a href ="https://www.linkedin.com/in/vitorsavedra/">Vitor Savedra</a>, <a href ="https://www.linkedin.com/in/wesley-tavares/">Wesley Tavares</a> - Gama Experience
         #2
-        <br> Designer: Bruno A L Mescouto (BARBA) - Gama Experience #4
+        <br> Designer: <a href ="https://www.linkedin.com/in/bruno-mescouto-002bb326/ ">Bruno A L Mescouto (BARBA) - Gama Experience #4</a>
       </div>
     </div>
   </footer>
