Add Div translate problems

--- a/index.html
+++ b/index.html
@@ -142,6 +142,79 @@
   </div>
 
 
+<div class="container">
+    <div class="section">
+      <p>
+        Ninguém gosta de falhar, porém, junto ao erro vem o aprendizado.
+
+        O Cemitério de Startups foi criado para empreendedores compartilharem os motivos que os fizeram fracassar, mas que ao invés de se envergonhar disso, dividem seu aprendizado e auxiliam outros diversos empreendedores nessa jornada tão difícil.
+        Seguimos a metodologia de Bill Gross e dividimos as causas mortis em 5 motivos:
+      </p>
+      <div class="row" style="text-align: center;">
+        <div class="col s12 m2">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">highlight</i></h2>
+            <h5 class="center">Idea</h5>
+
+            <p class="light">
+              *Novidade/Diferenciação
+	            *Competitividade
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m2" >
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Team</h5>
+
+            <p class="light">
+              *Eficiência/Efetividade
+  	          *Adaptabilidade
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m2" >
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">dashboard</i> </h2>
+            <h5 class="center">Business Model</h5>
+
+            <p class="light">
+              *Caminho claro bem definido
+		          *Receita recorrente
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m2" >
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">attach_money</i> </h2>
+            <h5 class="center">Funding</h5>
+
+            <p class="light">
+              *Arrecadação de investimentos inicial
+              *Financiamento, Acompanhamento e Crescimento
+            </p>
+          </div>
+        </div>
+
+
+        <div class="col s12 m2" >
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">timelapse</i> </h2>
+            <h5 class="center">Timming</h5>
+
+            <p class="light">
+            *Época propícia para o negócio
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</div>
+
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
