Partial maintence Jira

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 </script>
 <noscript>
-    <img height="1" width="1" src="https://www.facebook.com/tr?id=1698456227088674&ev=PageView&noscript=1" />
+    <img alt="Cemitério de Startups" height="1" width="1" src="https://www.facebook.com/tr?id=1698456227088674&ev=PageView&noscript=1" />
 </noscript>
 
 <!-- Google Analytics -->
@@ -100,7 +100,7 @@
 <body ng-app="myApp"  ng-controller="mainCtrl">
   <nav class="dark" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><img src="assets/img/logo.png" style="width:100%;"></img></a>
+      <a id="logo-container" href="#" class="brand-logo"><img src="assets/img/logo.png" alt="Cemitério de Startups" style="width:100%;"></img></a>
      <!-- <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -118,7 +118,7 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Cemitério de Startups</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Descubra porque tantas startups falharam e onde falharam!</h5>
+          <h5 class="header col s12 light">Descubra os maiores motivos das startups falharem no Brasil</h5>
         </div>
         <div class="row center">
           <a href="#container" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Vamos Começar!</a>
@@ -127,9 +127,81 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="../assets/img/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="../assets/img/background1.jpg" alt="Cemitério de Startups"></div>
   </div>
 
+  <div class="container">
+      <div class="section">
+        <p>
+        <h5 align="center">  Ninguém gosta de falhar, porém, junto ao erro vem o aprendizado.
+
+          O Cemitério de Startups foi criado para empreendedores compartilharem os motivos que os fizeram fracassar, mas que ao invés de se envergonhar disso, dividem seu aprendizado e auxiliam outros diversos empreendedores nessa jornada tão difícil.
+          Seguimos a metodologia de Bill Gross e dividimos as causas mortis em 5 motivos:</h5>
+        </p>
+        <div class="row" style="text-align: center;">
+          <div class="col s12 m2">
+            <div class="icon-block">
+              <h2 class="center brown-text"><i class="material-icons">highlight</i></h2>
+              <h5 class="center">Idea</h5>
+
+              <p class="light">
+                *Novidade/Diferenciação
+  	            *Competitividade
+              </p>
+            </div>
+          </div>
+
+          <div class="col s12 m2" >
+            <div class="icon-block">
+              <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+              <h5 class="center">Team</h5>
+
+              <p class="light">
+                *Eficiência/Efetividade
+    	          *Adaptabilidade
+              </p>
+            </div>
+          </div>
+
+          <div class="col s12 m2" >
+            <div class="icon-block">
+              <h2 class="center brown-text"><i class="material-icons">dashboard</i> </h2>
+              <h5 class="center">Business Model</h5>
+
+              <p class="light">
+                *Caminho claro bem definido
+  		          *Receita recorrente
+              </p>
+            </div>
+          </div>
+
+          <div class="col s12 m2" >
+            <div class="icon-block">
+              <h2 class="center brown-text"><i class="material-icons">attach_money</i> </h2>
+              <h5 class="center">Funding</h5>
+
+              <p class="light">
+                *Arrecadação de investimentos inicial
+                *Financiamento, Acompanhamento e Crescimento
+              </p>
+            </div>
+          </div>
+
+
+          <div class="col s12 m2" >
+            <div class="icon-block">
+              <h2 class="center brown-text"><i class="material-icons">timelapse</i> </h2>
+              <h5 class="center">Timming</h5>
+
+              <p class="light">
+              *Época propícia para o negócio
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </div>
 
   <div class="container" id="container">
     <div class="section">
@@ -177,88 +249,19 @@
   </div>
 
 
-<div class="container">
-    <div class="section">
-      <p>
-        Ninguém gosta de falhar, porém, junto ao erro vem o aprendizado.
 
-        O Cemitério de Startups foi criado para empreendedores compartilharem os motivos que os fizeram fracassar, mas que ao invés de se envergonhar disso, dividem seu aprendizado e auxiliam outros diversos empreendedores nessa jornada tão difícil.
-        Seguimos a metodologia de Bill Gross e dividimos as causas mortis em 5 motivos:
-      </p>
-      <div class="row" style="text-align: center;">
-        <div class="col s12 m2">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">highlight</i></h2>
-            <h5 class="center">Idea</h5>
-
-            <p class="light">
-              *Novidade/Diferenciação
-	            *Competitividade
-            </p>
-          </div>
-        </div>
-
-        <div class="col s12 m2" >
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Team</h5>
-
-            <p class="light">
-              *Eficiência/Efetividade
-  	          *Adaptabilidade
-            </p>
-          </div>
-        </div>
-
-        <div class="col s12 m2" >
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">dashboard</i> </h2>
-            <h5 class="center">Business Model</h5>
-
-            <p class="light">
-              *Caminho claro bem definido
-		          *Receita recorrente
-            </p>
-          </div>
-        </div>
-
-        <div class="col s12 m2" >
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">attach_money</i> </h2>
-            <h5 class="center">Funding</h5>
-
-            <p class="light">
-              *Arrecadação de investimentos inicial
-              *Financiamento, Acompanhamento e Crescimento
-            </p>
-          </div>
-        </div>
-
-
-        <div class="col s12 m2" >
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">timelapse</i> </h2>
-            <h5 class="center">Timming</h5>
-
-            <p class="light">
-            *Época propícia para o negócio
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-</div>
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Procure por uma Startup logo abaixo!<br><b>Ou se você conhece uma que faliu e não se encontra aqui, adicione</b></h5>
+          <h5 class="header col s12 light">
+            A sua startup também foi dessa para a melhor? Adicione seu case e ajude o ecossistema empreendedor do Brasil!
+            <br><b>Confira abaixo as startups que descansam eternamente em nosso cemitério!</b></h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../assets/img/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="../assets/img/background2.jpg" alt="Cemitério de Startups"></div>
 
     <script type="text/javascript" src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script>
 
@@ -337,7 +340,7 @@
 
             </div>
             <div class="input-field col s12">
-             <label for="info">Quote </label>
+             <label for="info">Causa Mortis </label>
 			 <br>
              <p id="info">
 			 {{info}}
@@ -345,13 +348,13 @@
             </div>
 
             <div class="input-field col s6">
-                <label for="date_born">Início</label>
+                <label for="date_born">Nascimento da Startup</label>
                 <br>
                 <p id="date_born">
 				{{date_born}}</p>
             </div>
             <div class="input-field col s6">
-                <label for="date_fail">Falha</label>
+                <label for="date_fail">Falecimento da startup</label>
             <br>
             <p id="date_fail">
 			{{date_fail}}</p>
@@ -371,7 +374,7 @@
 				</p>
             </div>
             <div class="input-field col s12">
-                <label for="url_founder">URL Fundador</label>
+                <label for="url_founder">URL Fundador (Twitter ou Linkedin)</label>
 				<br>
                 <p id="url_founder">
 				{{url_founder}}
@@ -410,6 +413,17 @@
 
 
             </div>
+
+            <div class="input-field col s6">
+                <label for="stateUF">Estado</label>
+                <br><br>
+                <select class="browser-default" name="state" id ="stateUF" ng-model="state" ng-required="false">
+
+                </select>
+
+
+            </div>
+
             <div class="input-field col s6">
                 <label for="dcity">Cidade</label>
                 <br><br>
@@ -418,30 +432,22 @@
 			</select>
 
             </div>
-            <div class="input-field col s6">
-                <label for="stateUF">Estado</label>
-                <br><br>
-                <select class="browser-default" name="state" id ="stateUF" ng-model="state" ng-required="false">
 
-			</select>
-
-
-            </div>
             <div class="input-field col s12">
                 <textarea ng-model="info" ng-required="true"
        ng-minlength="20"
-       ng-maxlength="250" type="text" class="validate materialize-textarea" placeholder="Digite o Quote..."></textarea>
-                <label for="info">Quote (Mínimo: 20 caracteres) </label>
+       ng-maxlength="250" type="text" class="validate materialize-textarea" placeholder="Digite o Causa Mortis..."></textarea>
+                <label for="info">Causa Mortis (Mínimo: 20 caracteres) </label>
             </div>
 
             <div class="input-field col s6">
-                <label for="date_born">Data de Início (MM/AAAA)</label>
+                <label for="date_born">Nascimento da Startup (MM/AAAA)</label>
                 <br><br>
                 <input ng-model="date_born" ng-pattern='/^(0?[1-9]|1[012])\/(199\d)|([2-9]\d{3})$/' ng-required="true" id = "date_bornN"  type="string" class="text-field validate" placeholder="Digite o Início..." ></input>
 
             </div>
             <div class="input-field col s6">
-                <label for="date_fail">Data de Fail (MM/AAAA)</label>
+                <label for="date_fail">Falecimento da startup (MM/AAAA)</label>
                 <br><br>
                 <input ng-model="date_fail" ng-pattern='/^(0?[1-9]|1[012])\/(199\d)|([2-9]\d{3})$/' ng-required="true" id = "date_failN"  type="string" class="text-field validate" placeholder="Digite a Fail..." ></input>
 
@@ -533,9 +539,9 @@
                     <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">Cidade</th>
                     <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">UF</th>
                     <th class="visible-xs visible-sm visible-md visible-lg">Motivo</th>
-                    <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">Quote do empreendedor</th>
+                    <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">Causa Mortis</th>
 
-                    <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">Data do Fail</th>
+                    <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">Falecimento</th>
                     <th class="hide-on-small-only hide-on-med-only hide-on-med-and-down">Investimento</th>
                     <th class="visible-xs visible-sm visible-md visible-lg">Fundador</th>
                   </tr>
@@ -548,9 +554,9 @@
             <td data-title="Cidade" class="hide-on-small-only hide-on-med-only hide-on-med-and-down">{{ d.city }}</td>
             <td data-title="UF" class="hide-on-small-only hide-on-med-only hide-on-med-and-down">{{ d.state }}</td>
             <td data-title="Motivo" class="text-align-center visible-xs visible-sm visible-md visible-lg">{{ d.name_problem }}</td>
-            <td data-title="Quote" class="hide-on-small-only hide-on-med-only hide-on-med-and-down"> {{ d.info |strLimit:100 }}</td>
+            <td data-title="Causa Mortis" class="hide-on-small-only hide-on-med-only hide-on-med-and-down"> {{ d.info |strLimit:100 }}</td>
 
-             <td data-title="Data do Fail" class="hide-on-small-only hide-on-med-only hide-on-med-and-down">{{ d.date_fail }}</td>
+             <td data-title="Falecimento" class="hide-on-small-only hide-on-med-only hide-on-med-and-down">{{ d.date_fail }}</td>
              <td data-title="Investimento" class="hide-on-small-only hide-on-med-only hide-on-med-and-down">{{ d.investiment | currency:"R$ "}}</td>
              <td data-title="Fundador" class="visible-xs visible-sm visible-md visible-lg text-align-center"> <a class="waves-effect waves-light btn purple darken-4" href="{{ d.url_founder }}">{{d.name_founder}}</a>     </td>
         </tr>
@@ -571,17 +577,17 @@
 
     <div class="footer-copyright">
       <div class="container">
-        © 2017 - Made with ❤ by &nbsp; &nbsp;    <a href="http://gama.academy/"><img src="assets/img/gama.png" width="10%"></a> ©
+        © 2017 - Made with ❤ by &nbsp; &nbsp;    <a href="http://gama.academy/"><img alt="Cemitério de Startups" src="assets/img/gama.png" width="10%"></a> ©
         <br><br>
         Developers:
         <a href ="https://www.linkedin.com/in/bruno-andrade-santos-67565711b/">Bruno Andrade Santos</a>,
         <a href ="https://www.linkedin.com/in/michaellrg/">Michaell Reis Gasparini</a>,
         <a href ="https://www.linkedin.com/in/victormarcorin/">Victor Angelo Marcorin</a>,
         <a href ="https://www.linkedin.com/in/vitorsavedra/">Vitor Savedra</a>,
-        <a href ="https://www.linkedin.com/in/wesley-tavares/">Wesley Tavares</a> - Gama Experience #2
+        <a href ="https://www.linkedin.com/in/wesley-tavares/">Wesley Tavares</a> - #2 Gama Experience
         <br>
         Designer:
-        <a href ="https://www.linkedin.com/in/bruno-mescouto-002bb326/ ">Bruno A L Mescouto (BARBA)</a> - Gama Experience #4
+        <a href ="https://www.linkedin.com/in/bruno-mescouto-002bb326/ ">Bruno A L Mescouto (BARBA)</a> - #4 Gama Experience
       </div>
     </div>
   </footer>
