Maintence request Barba

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         <a href ="https://www.linkedin.com/in/vitorsavedra/">Vitor Savedra</a>,
         <a href ="https://www.linkedin.com/in/wesley-tavares/">Wesley Tavares</a> - #2 Gama Experience
         <br>
-        Designer:
+        Designer UI/ UX:
         <a href ="https://www.linkedin.com/in/bruno-mescouto-002bb326/ ">Bruno A L Mescouto (BARBA)</a> - #4 Gama Experience
       </div>
     </div>
