Report erro com e-mail funcionando

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 
             <br><br>
             <div class="input-field col s12">
-              <textarea ng-required="true" ng-minlength="10" ng-maxlength="250" ng-model="report_error_more_info" id="report_error_more_info" type="text" class="validate materialize-textarea"
+              <textarea ng-required="true" ng-model="report_error_more_info" id="report_error_more_info" type="text" class="validate materialize-textarea"
                 placeholder="Especifique as informações do erro..."></textarea>
               <label for="report_error_more_info">Informações do erro</label>
             </div>
